<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:ctx=".PassResetActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
          />

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/background_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_below="@id/app_bar_layout"
        android:background="@color/whitelight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_mlarge"
        app:background="@color/black">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:src="@drawable/ppapplogo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_middle"
            android:visibility="visible"
            android:background="@color/grayDark"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_mlarge">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_xlarge"
                    android:text="@string/reset"
                    android:textAllCaps="true"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reset_pass"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_rounded_primary"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/send"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

    </LinearLayout>


</RelativeLayout>